# RingSampler

./: .gitignore  CMakeLists.txt  README.md
preprocess/: generate_offset&edges.py  generate_train_val_test.py
realtedWork/DGL/: README.md  data_loader.py  node-wise_sampling.py  run_DGL.sh
realtedWork/DGL/preprocess/: gen_sparse_graph.py  to_tensor.py
realtedWork/SmartSSD/: README.md
realtedWork/gSampler/: README.md  graphsage_gSampler.py  load_graph_utils.py  run_graphsage_gsampler.sh
realtedWork/gSampler/preprocess/: gen_graph_from_txt.py  generate_tensor.py
scripts/: clean.sh  nodewise_sampling.sh
src/: core.c  core.h  layer_sampling.c  layer_sampling.h  main.c  random_selection.c  random_selection.h  remove_duplicate.c  remove_duplicate.h  utils.c  utils.h
tests/: test_main.c  test_multi_epoch.c
